LOGCXX-202: Inconsistent const-ness in ObjectPtrT